--- a/css/main.css
+++ b/css/main.css
@@ -37,9 +37,9 @@ p {
   text-align: center;
   overflow: hidden;
   background: white;
-  -webkit-box-shadow: 0px 3px 15px 15px rgba(0, 0, 0, 0.02);
-  -moz-box-shadow: 0px 3px 15px 15px rgba(0, 0, 0, 0.02);
-  box-shadow: 0px 3px 15px 15px rgba(0, 0, 0, 0.02);
+  -webkit-box-shadow: 0px 20px 45px 15px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 20px 45px 15px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 20px 45px 15px rgba(0, 0, 0, 0.15);
   border-radius: .75em;
 }
 
@@ -68,16 +68,16 @@ p {
   padding: 1em 1em 1.5em;
 }
 
-.card .card-info .ci-name {
+.card .ci-name {
   font-weight: 700;
 }
 
-.card .card-info .ci-name span {
+.card .ci-name span {
   font-weight: 400;
   color: #6a6f81;
 }
 
-.card .card-info .ci-location {
+.card .ci-location {
   padding: .5em 0;
   font-size: .75rem;
   color: #6a6f81;
